调整图片格式

--- a/other/位运算.md
+++ b/other/位运算.md
@@ -2,7 +2,7 @@
 
 令人头疼的位运算😑。计算机只认0和1，也就是二进制，这我知道。编码中最小的单位是字节（byte），一个字节有八位，每一位都是0或1，这我也知道，所以一个字节用二进制表示就是这样。
 
-![image-20201208110110715](/Users/xyh/Desktop/my-note/other/位运算.assets/image-20201208110110715.png)
+<img src="位运算.assets/image-20201208110110715.png" alt="image-20201208110110715" style="zoom:50%;" />
 
 ## 与运算符（&）
 
@@ -28,7 +28,7 @@
 
 看图
 
-![image-20201208111320792](/Users/xyh/Desktop/my-note/other/位运算.assets/image-20201208111320792.png)
+<img src="位运算.assets/image-20201208111320792.png" alt="image-20201208111320792" style="zoom:80%;" />
 
 
 
@@ -54,7 +54,7 @@
 
 看图
 
-![image-20201208112055979](/Users/xyh/Desktop/my-note/other/位运算.assets/image-20201208112055979.png)
+<img src="位运算.assets/image-20201208112055979.png" alt="image-20201208112055979" style="zoom:50%;" />
 
 ## 异或运算符（^）
 
@@ -70,7 +70,7 @@
 
 不同为true
 
-![image-20201208112537418](/Users/xyh/Desktop/my-note/other/位运算.assets/image-20201208112537418.png)
+<img src="位运算.assets/image-20201208112537418.png" alt="image-20201208112537418" style="zoom:50%;" />
 
 
 
@@ -113,3 +113,4 @@
 ## 无符号右移（>>>）
 
 高位补0
+
